[project]
name = "10-1 продвинутый git"
version = "0.1.0"
description = ""
authors = [
    {name = "Olesia Laskovets",email = "olesya_izvarina@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "10"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
